# kemono-downloader

./: .gitignore  CHANGELOG.md  LICENSE  cabal.project  kemono-downloader.cabal
app/: Main.hs
coomer-downloader/: coomer-downloader.cabal
coomer-downloader/app/: Main.hs
coomer-downloader/src/Coomer/: Downloader.hs
coomer-downloader/src/Coomer/Downloader/: Api.hs
kemono-downloader/: README  kemono-downloader.cabal
kemono-downloader/app/: Main.hs
kemono-downloader/src/Kemono/: Downloader.hs
kemono-downloader/src/Kemono/Downloader/: Api.hs  Fetch.hs  Types.hs  Utils.hs
kemono-matrix-notifier-bot/: CHANGELOG.md  kemono-matrix-notifier-bot.cabal
kemono-matrix-notifier-bot/app/: Main.hs
kemono-matrix-notifier-bot/src/Kemono/Notifier/: Bot.hs
kemono-notifier/: CHANGELOG.md  LICENSE  kemono-notifier.cabal
kemono-notifier/app/: Main.hs
kemono-notifier/src/Kemono/: Notifier.hs
kemono-notifier/src/Kemono/Notifier/: Api.hs  Fetch.hs  Printer.hs  Types.hs
src/: ConvertUrl.hs  Downloader.hs  FetchJson.hs  Types.hs  Utils.hs
