cabal-version:      3.0
name:               kemono-matrix-notifier-bot
version:            0.1.0.0
synopsis:           Matrix kemono update notifier bot
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mrjt Jmn
maintainer:         meritamen@sdf.org
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

source-repository head
  type: git
  location: https://github.com/meritamen/kemono-toolkit

common warnings
    ghc-options: -Wall -Wno-name-shadowing

library
    import:           warnings
    exposed-modules:  Kemono.Notifier.Bot
    build-depends:    async
                    , base ^>=4.18.3.0
                    , containers
                    , dhall
                    , kemono-notifier
                    , matrix-client
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable kemono-matrix-notifier-bot
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                    , kemono-matrix-notifier-bot
    hs-source-dirs:   app
    default-language: Haskell2010
