cabal-version:      3.0
name:               kemono-notifier
version:            0.1.0.0
synopsis:           Cli tool provides post updates of Kemono.su
-- description:
homepage:           https://github.com/meritamen/kemono-toolkit
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mrjt Jmn
maintainer:         meritamen@sdf.org
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

source-repository head
  type: git
  location: https://github.com/meritamen/kemono-toolkit

common warnings
    ghc-options: -Wall -Wno-name-shadowing

common optimizations
    ghc-options: -O2

library
    import:           warnings, optimizations
    exposed-modules:  Kemono.Notifier
                    , Kemono.Notifier.Api
                    , Kemono.Notifier.Fetch
                    , Kemono.Notifier.Printer
                    , Kemono.Notifier.Types
    build-depends:    base ^>=4.18.3.0
                    , aeson
                    , async
                    , bytestring
                    , containers
                    , dhall
                    , http-conduit
                    , network
                    , text
                    , time
    hs-source-dirs:   src
    default-language: Haskell2010

executable kemono-notifier
    import:           warnings, optimizations
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0
                    , kemono-notifier
    hs-source-dirs:   app
    default-language: Haskell2010
